--- a/css/main.css
+++ b/css/main.css
@@ -87,12 +87,80 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   .layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 2000;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+  
+  .messageBox {
+    background-color: lightgrey;
+    color: black;
+    padding: 2rem;
+    width: 40%;
+    position: fixed;
+    z-index: 2001;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    
+  }
+
+h2{
+  font-family: 'Saiyan Sans', sans-serif;
+}
+
+body{
+  background: url('https://external-preview.redd.it/ja2rwASy69ySlG3q_Brb8RhD7Sq2gzUEqSxxAbomVS8.png?auto=webp&s=d94d3cd074c7933031287abca2bcfc9735c1c8a6');
+  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
+
    .disableClick {
     pointer-events: none;
 }
 
-  img{
-    max-width: 100%;
+  .header{
+    height: 20vh;
+    
+  }
+
+  #yellow{
+  color: rgb(233, 218, 8);
+
+}
+
+#red{
+  color: red;
+}
+
+  h1{
+    margin-top: 10%;
+    font-family: 'Saiyan Sans', sans-serif;
+    font-size: 7em;
+    text-shadow: 2px 0 0 #000, 0 -1px 0 #000, 0 2px 0 #000, -1px 0 0 #000;
+  }
+
+
+  .logo{
+    width: 20%;
+    margin: 1%;
+    
+  }
+
+  .balls{
+    width: 100%;
     max-height: auto;
   }
 
@@ -101,6 +169,10 @@ textarea {
     display: flex;
     flex-wrap: wrap-reverse;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40vw;
+    margin-top: 5%;
   }
 
    .cardBloc {
@@ -122,9 +194,7 @@ textarea {
     backface-visibility: hidden;
   }
 
-  .card__face--front {
-  
-  }
+
   
   .card__face--back {
     transform: rotateY( 180deg );
